libphx/include/Shader.h

PHX_API Shader*       Shader_Load           (cstr vertName, cstr fragName);
PHX_API void          Shader_Start          (Shader*);
PHX_API void          Shader_Stop           (Shader*);
PHX_API void          Shader_SetFloat       (cstr, float);
PHX_API void          Shader_SetFloat2      (cstr, float, float);
PHX_API void          Shader_SetFloat4      (cstr, float, float, float, float);