libphx/include/Draw.h

PHX_API void  Draw_Color         (float r, float g, float b, float a);
/* --- 2D API --------------------------------------------------------------- */

PHX_API void  Draw_Border        (float s, float x, float y, float w, float h);
PHX_API void  Draw_Rect          (float x, float y, float sx, float sy);